Fix for overlapping edit controls

--- a/static/css/sheets.css
+++ b/static/css/sheets.css
@@ -442,7 +442,6 @@ body {
 .sheetItem {
 	position: relative;
 	padding: 32px 32px;
-	margin-top: -32px;
 }
 
 #sheet #sources .sheetItem .sourceNumber.en {
